syntax = "proto3";
option go_package = "card-service/Server";

service CardService{
  rpc SayHello(Name) returns (Hello);
  //rpc CreateUserFlashCard(CreateFlashCardReq) returns (CreateFlashCardRes);
}

message Name {
  string name = 1;
}

message Hello {
  string hello = 1;
}

message Answer {
  int32 field = 1;
  repeated string answers = 2;
  repeated string incorrectAnswers = 3;
  string explanation = 4;
}

message CreateFlashCardReq {
  string username = 1;
  string title = 2;
  string text = 3;
  repeated Answer answers = 4;
  repeated string media = 5;
  repeated string lang = 6;
  repeated string topics = 7;
}

message CreateFlashCardRes {
  string id = 1;
  string username = 2;
  string title = 3;
  string text = 4;
  repeated Answer answers = 5;
  repeated string media = 6;
  repeated string lang = 7;
  repeated string topics = 8;
}